# advent-of-code

./: go.mod  readme.md
2024/template/: solution.go  solution_test.go
go/: go.mod  readme.md
go/2015/01/: solution.go  solution_test.go
go/2024/01/: solution.go  solution_test.go
go/template/: solution.go  solution_test.go
lua/: readme.md
lua/template/: solution.lua  solution_test.lua
lua/util/: test_runner.lua
puzzles/2015/01/: readme.md
puzzles/2024/: 01.md  02.md  03.md
python/: .gitignore  Makefile  pyproject.toml  readme.md
python/2015/01/: solution.py  solution_test.py
python/2024/01/: solution.py  solution_test.py
python/2024/02/: solution.py  solution_test.py
python/2024/03/: solution.py  solution_test.py
python/template/: solution.py  solution_test.py
template/: problem.md  solution.go  solution_test.go
