[tool.poetry]
name = "advent-of-python"
version = "0.1.0"
description = "advent of code solutions in python"
authors = ["maddawik <edwardreillycomputers@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
